# tg-theatres-monitor

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Taskfile.yml  pyproject.toml  setup.cfg
monitor/: __main__.py  theatres_cfg.yaml
monitor/notifier/: __init__.py  tg_send_message.py
monitor/parser/: __init__.py  generic_parser.py  parsing.py  theatres_cfg.yaml
monitor/utils/: load_cfg.py  logger.py
tests/: test_logger.py  test_parsing.py  test_tg_send_message.py
